--- a/dqdoom.ipynb
+++ b/dqdoom.ipynb
@@ -167,6 +167,52 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tommy_doomnet import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "w la fica\n"
+     ]
+    }
+   ],
+   "source": [
+    "g = DoomNet()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['__doc__', '__init__', '__module__']"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dir(g)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
