--- a/2_f2a_model_traning.ipynb
+++ b/2_f2a_model_traning.ipynb
@@ -8,11 +8,16 @@
    "source": [
     "import numpy as np           \n",
     "import tensorflow as tf\n",
-    "import f2alib\n",
     "import matplotlib.pyplot as plt\n",
-    "plt.style.use(['dark_background'])  # n00bz who dont\n",
-    "f2alib.init_basic_env()  # init basic environment"
+    "plt.style.use(['dark_background'])  # n00bz who dont"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
